# reservoiragent

./: !runAgent.bat  .gitignore  CLAUDE.md  FINDINGS.md  HANDOFF.md  README.md  RESERVOIR_AGENTS.md  devlog.md  pyproject.toml  queue.md  report-print.html  run_agent.bat  run_recall_demo.bat  todo.md
.github/workflows/: ci.yml  (+4 more)
data_lake/: README.md  build_residual_reservoir_svg.py  external_reviews_2026-06-13.md  extract_chat_context.py  reservoir_agent_plan.md  retheme_diagrams.py  start of the convo.md
docs/: 404.html  CNAME  arxiv.md  index.html
installer/: build_exe.py  install.py
literature/: REVIEW.md  novelty_recheck.md  sources.md
paper/: .last_submitted_hash  .paper_id  README.md  paper.tex
replication/: README.md  reproduce.py
scripts/: hermes_h1.py  plot_epoch_curve.py  plot_recall_bars.py  publish_hf.py  pull_clawrxiv_reviews.py  run.py  submit_clawrxiv_paper.py  train_large.py
tests/: test_alive.py  test_batch.py  test_battery.py  test_blank_cycle.py  test_console.py  test_controlled.py  test_crosspass.py  test_determinism.py  test_echo_state.py  test_episode_aux.py  test_harness.py  test_hermes_harness.py  test_inject.py  test_installer_menu.py  test_interrupt.py  test_kv_evict.py  test_kv_inject.py  test_metrics.py  test_persist.py  test_plot_epoch_curve.py  test_plot_recall_bars.py  test_probe.py  test_pull_clawrxiv.py  test_registry.py  test_rnn_baseline.py  test_runtime.py  test_seed_metrics.py  test_selection.py  test_silence.py  test_smoke.py  test_submit_clawrxiv.py  test_sweep.py  test_tasks.py  test_torch_inject.py  test_train_seed.py
(+106 files in other folders)
